# pop-android-sdk

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/id/gpi/popplussdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/id/gpi/popplussdk/: Fungsi.java  MainActivity.java  myFixValue.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/id/gpi/popplussdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
popplus/: build.gradle
popplus/src/androidTest/java/id/gpi/popplus/: ExampleInstrumentedTest.java
popplus/src/main/: AndroidManifest.xml
popplus/src/main/java/id/gpi/popplus/: CredLib.java  CredPres.java  Credentials.java
popplus/src/main/java/id/gpi/popplus/base/: BaseViewPresenter.java  IBaseViewPresenter.java  PosLinkGenerator.java  ResponseSubscriber.java
popplus/src/main/java/id/gpi/popplus/common/: FixValue.java  Fungsi.java
popplus/src/main/java/id/gpi/popplus/model/: CredentialsData.java  DeviceData.java  ResponsePojo.java
popplus/src/main/java/id/gpi/popplus/service/: BasicAuthInterceptor.java  GetPlusLib.java  (+1 more)
popplus/src/main/native/aeseverywhere/: aes256.cpp  aes256.hpp  base64.cpp  md5.cpp
popplus/src/main/native/common/: CMakeLists.txt  getpluslib.cpp  getpluslib.hpp  onload.cpp  onload.hpp  poppluslib.cpp  poppluslib.hpp  utils.cpp  utils.hpp
popplus/src/main/native/encryptor/: aes256.c  aes256.h  base64.cpp  base64.hpp
popplus/src/test/java/id/gpi/popplus/: ExampleUnitTest.java
